--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
     "element-plus": "^2.9.5",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0"
